--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,6 +196,7 @@ main {
         line-height: 75px;
         margin: 0 0.5rem;
     }
+
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
@@ -207,17 +208,55 @@ main {
         width: 300px;
         right: 50px;
     }
-    /* Footer */
-    footer {
-        background-color: #ffffff;
-        padding: 1rem 0;
-        text-align: center;
+
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    #benefits-physical > div,
+    #benefits-mental > div {
+        width: 75%;
+    }
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
     }
 }
 
-/* Lage devices (laptops and desktops, 992px and up) */
+/* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    /* Reasons section */
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #benefits > div {
+        flex: 1;
+    }
+
+    #benefits-image {
+        order: 0;
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end;
     }
 }
