--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,33 @@
-/* Asterisk wildcard selector to override default styles added by the browser*/
 /*Google font import */
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap");
 
+/* Asterisk wildcard selector to override default styles added by the browser*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-/* General Styles */
+/* General styles */
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     /*Generic project styles*/
     color: #3a3a3a;
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
 }
 
 h1,
 h2,
 h3 {
-    font-family: Oswald, sans-serif;
+    font-family: "Oswald", sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
+}
+
+.hidden-heading {
+    display: none;
 }
 
 /* Header */
@@ -55,7 +59,7 @@ header a {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/*Navbar styles with dropdown toggle */
+/* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
     background-color: #ffffff;
@@ -66,7 +70,7 @@ nav {
     display: none;
     top: 100%;
 }
-/* Nav toggle*/
+/* Nav toggle */
 #nav-toggle:checked ~ nav {
     display: block;
 }
@@ -93,7 +97,7 @@ main {
 }
 
 #cover-text {
-    /* Final rgba value sets the opcaity so it is semi-transparent */
+    /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, 0.7);
     font-size: 130%;
     position: absolute;
@@ -108,7 +112,7 @@ main {
 #cover-text > h3 {
     color: #ffffff;
 }
-/*Reasons section */
+/* Reasons section */
 #reasons {
     width: 90%;
     margin: 20px auto;
@@ -150,7 +154,42 @@ main {
     align-items: center;
     justify-content: center;
 }
-/*Footer */
+/* Meetup Times section */
+#times {
+    background: url("../images/dublin-city.webp") no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 15px;
+    text-align: center;
+    /* This will not wrap on screens of less than 400px wide. Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* Creates a grid of meetup time divs over the background image */
+    border: 2px solid white;
+}
+
+#times h3 {
+    /* Override the heading colour set in general styles */
+    color: #fafafa;
+}
+
+/* Gallery page */
+
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
+
+/* Footer */
 #social-networks {
     text-align: center;
     padding: 20px 0;
@@ -165,9 +204,6 @@ main {
     color: #3a3a3a;
 }
 
-#social-networks i {
-    margin: 0 1rem;
-}
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
