--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*Google font import */
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap");
 
-/* Asterisk wildcard selector to override default styles added by the browser*/
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    /*Generic project styles*/
+    /* Generic project styles*/
     color: #3a3a3a;
     font-family: "Lato", sans-serif;
 }
@@ -166,7 +166,9 @@ main {
     background-color: rgba(0, 0, 0, 0.6);
     padding: 15px;
     text-align: center;
-    /* This will not wrap on screens of less than 400px wide. Each div will expand to fill the available space on its row */
+    /* This will not wrap on screens of less than 400px wide. 
+    
+    Each div will expand to fill the available space on its row */
     flex-basis: 200px;
     flex-grow: 1;
     /* Creates a grid of meetup time divs over the background image */
